syntax = "proto3";

package auth.v1;

option go_package = "github.com/tarmalonchik/golibs/proto/gen/go/auth;proto";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
  AuthOption auth = 50001;
}

enum AuthType {
  AUTH_TYPE_UNSPECIFIED = 0;
  AUTH_TYPE_BASIC = 1;
}

message AuthOption {
  AuthType type = 1;
}